--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
+    <section role="complementary" id="map-container">
       <div id="map"></div>
     </section>
-    <section id="mainView" style="">
+    <section id="mainView">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <div id="selView" style="">
+        <div id="selView">
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
