--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+      <a href="#mainView" class="skip-link">To main content</a>
   <header>
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
