--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 
   <main id="maincontent">
     <section role="complementary" id="map-container">
-      <div id="map"></div>
+      <div role="application" aria-label="location" id="map"></div>
     </section>
     <section id="mainView">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <div id="selView">
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" aria-label="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" aria-label="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
           
