--- a/restaurant.html
+++ b/restaurant.html
@@ -22,7 +22,7 @@
       <h1><a tabindex="2" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul role="navigation" aria-label="Breadcrumb" id="breadcrumb" >
       <li><a tabindex="3" href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -34,7 +34,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div tabindex="4" id="map"></div>
+      <div tabindex="4" aria-label="location" role="application" id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
