fetch call implemented, working with idb to replace service worker.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiVOqMM7e1DjhcRkufTY0i3CcO6hW-yB4&libraries=places&callback=initMap"></script>
+  <script src="sw2.js"></script>
 
 
   <footer id="footer">
